// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Add Only One Tab on Information Bar 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div
        class="MuiBox-root css-k008qs"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked css-1txhcbl-MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight css-18sg6k4-MuiPaper-root-MuiDrawer-paper"
          >
            <div
              class="css-15lei78"
            />
            <div
              class="css-ak1ss8"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-testid="openDrawer"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ChevronLeftIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              aria-labelledby="simple-tab-0"
              id="simple-tabpanel-0"
              role="tabpanel"
            >
              <div
                class="MuiBox-root css-9sn6pt"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                >
                  Major
                </p>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                />
                <div>
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      CS CSSSD
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                  >
                    Gen Eds
                  </p>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                  />
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      GLP
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="simple-tab-1"
              hidden=""
              id="simple-tabpanel-1"
              role="tabpanel"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Test Requirements in the Information Bar on the Schedule Page 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div
        class="MuiBox-root css-k008qs"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked css-1txhcbl-MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight css-18sg6k4-MuiPaper-root-MuiDrawer-paper"
          >
            <div
              class="css-15lei78"
            />
            <div
              class="css-ak1ss8"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-testid="openDrawer"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ChevronLeftIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              aria-labelledby="simple-tab-0"
              id="simple-tabpanel-0"
              role="tabpanel"
            >
              <div
                class="MuiBox-root css-9sn6pt"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                >
                  Major
                </p>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                />
                <div>
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      CS CSSSD
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                  >
                    Gen Eds
                  </p>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                  />
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      GLP
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Test Switching Tabs on Information Bar 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div
        class="MuiBox-root css-k008qs"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked css-1txhcbl-MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight css-18sg6k4-MuiPaper-root-MuiDrawer-paper"
          >
            <div
              class="css-15lei78"
            />
            <div
              class="css-ak1ss8"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-testid="openDrawer"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ChevronLeftIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              aria-labelledby="simple-tab-0"
              id="simple-tabpanel-0"
              role="tabpanel"
            >
              <div
                class="MuiBox-root css-9sn6pt"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                >
                  Major
                </p>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                />
                <div>
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      CS CSSSD
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
                  >
                    Gen Eds
                  </p>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-1ck9kc3-MuiDivider-root"
                  />
                  <div
                    class="RequirementText"
                    data-testid="requirement"
                  >
                    <div
                      class="requirementName"
                    >
                      GLP
                    </div>
                    <div
                      class="percentage"
                    >
                      <div
                        class="MuiBox-root css-poat16"
                      >
                        <span
                          aria-valuenow="0"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1i5hnxo-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 40px; height: 40px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
                            />
                          </svg>
                        </span>
                        <div
                          class="MuiBox-root css-17snrrl"
                        >
                          <div
                            class="MuiTypography-root MuiTypography-caption css-x3aacn-MuiTypography-root"
                          >
                            0%
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="simple-tab-2"
              hidden=""
              id="simple-tabpanel-2"
              role="tabpanel"
            />
            <div
              aria-labelledby="simple-tab-1"
              hidden=""
              id="simple-tabpanel-1"
              role="tabpanel"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
